# nix-ml-solo

./: .gitignore  .pre-commit-config.yaml  .shellcheckrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  devenv.nix  devenv.yaml  pyproject.toml  release-please-config.json
.dvc/: config
.github/: dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  question.md
.github/workflows/: docs.yml  lint.yml  prerelease.yml  release-please.yml  test.yml
data/: test.csv.dvc  train.csv.dvc
docs/: README.md  SUMMARY.md  architecture.md  aws-auth.md  book.toml  cloud-mode.md  commands.md  configuration.md  container-image.md  ec2.md  faq.md  getting-started.md  inference.md  introduction.md  local-mode.md  nix-cache.md  sync.md  teardown-restore.md  training.md
infra/: devenv.nix  scripts.nix
infra/container/: Dockerfile  base.nix  entrypoint.sh
infra/scripts/: _lib.sh  _wizard.sh  container-build.sh  deploy.sh  enter-shell.sh  nix-cache-configure-local.sh  nix-cache-push.sh  restore.sh  status.sh  teardown.sh  tf-bootstrap.sh  tf-init.sh  train.sh
infra/scripts/aws/: aws-login.sh  aws-verify.sh  setup.sh  tf-apply.sh  tf-bootstrap.sh  tf-destroy.sh  tf-init.sh  tf-plan.sh
infra/scripts/deploy/: container-build.sh  deploy-status.sh  deploy.sh
infra/terraform/: backend.tfvars  main.tf  outputs.tf  variables.tf
notebooks/: starter.ipynb
src/: inference.py
tests/: conftest.py
tests/integration/: test_devenv.py  test_lib.py  test_local_mode.py  test_scripts.py
tests/unit/: test_config.py  test_inference.py
(+40 files in other folders)
