[project]
name = "nix-ml-solo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=2.13",
    "dvc[s3]>=3.50",
    "boto3>=1.34",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "jupyterlab>=4.0",
    "papermill>=2.6",
]

[dependency-groups]
dev = [
    "ipykernel>=6.0",
    "black>=24.0",
    "ruff>=0.15.20",
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "requests>=2.32",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that start real processes (mlflow server, etc.)",
]
